# flake-templates

./: Justfile  README.md  flake.nix  rust-toolchain.toml
templates/gleam/: .gitignore  Justfile  README.md  flake.nix  gleam.toml
templates/gleam/src/: main.gleam
templates/nightly-rust/: Cargo.toml  Justfile  README.md  flake.nix  treefmt.nix
templates/nightly-rust/src/: lib.rs  main.rs
